moved TimeUtils out of utils subdirectory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,14 @@
 add_subdirectory(utils)
 
+add_library(TimeUtils TimeUtils.cpp)
+add_library(${PROJECT_NAME}::TimeUtils ALIAS TimeUtils)
+
 add_library(Benchmark Benchmark.cpp)
-target_link_libraries(Benchmark PUBLIC Utils)
+target_link_libraries(Benchmark PUBLIC TimeUtils Statistics)
 
 add_library(${PROJECT_NAME}::Benchmark ALIAS Benchmark)
 
 add_library(Timer Timer.cpp)
-target_link_libraries(Timer PUBLIC Utils)
+target_link_libraries(Timer PUBLIC TimeUtils Statistics)
 
 add_library(${PROJECT_NAME}::Timer ALIAS Timer)
