--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Utils Statistics.cpp TimeUtils.cpp)
+add_library(Statistics Statistics.cpp)
 
-add_library(${PROJECT_NAME}::Utils ALIAS Utils)
+add_library(${PROJECT_NAME}::Statistics ALIAS Statistics)
